--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		<script src="assets/jquery.js"></script>
 		<script src="assets/jquery.mobile-1.3.1.min.js"></script>
+		
+		<icon src="assets/imgs/bdaSpearfishing.png" width="72" height="72" />
+		
 	</head>
 	<body >
 	
