--- a/index.html
+++ b/index.html
@@ -11,8 +11,55 @@
 		
 		<icon src="assets/imgs/bdaSpearfishing.png" width="72" height="72" />
 		
+		<script>
+		function load(){
+			var clicking = false;
+			var previousX;
+			var previousY;
+			
+			$("#scroll").mousedown(function(e) {
+			    e.preventDefault();
+			    previousX = e.clientX;
+			    previousY = e.clientY;
+			    clicking = true;
+			});
+			
+			$(document).mouseup(function() {
+			      
+			    clicking = false;
+			});
+			
+			$("#scroll").mousemove(function(e) {
+			
+			    if (clicking) {
+			        e.preventDefault();
+			        var directionX = (previousX - e.clientX) > 0 ? 1 : -1;
+			        var directionY = (previousY - e.clientY) > 0 ? 1 : -1;
+			        //$("#scroll").scrollLeft($("#scroll").scrollLeft() + 10 * directionX);
+			        //$("#scroll").scrollTop($("#scroll").scrollTop() + 10 * directionY);
+			        $("#scroll").scrollLeft($("#scroll").scrollLeft() + (previousX - e.clientX));
+			        $("#scroll").scrollTop($("#scroll").scrollTop() + (previousY - e.clientY));
+			        previousX = e.clientX;
+			        previousY = e.clientY;
+			    }
+			});
+		}
+		</script>
+		
+		<style>
+			#scroll {
+			    width: 100%;
+			    height: 800px;
+			    overflow:hidden;
+			}
+			
+			.blue {
+			    width: 1800px;
+			    height: 1800px;
+			}
+		</style>
 	</head>
-	<body>
+	<body onload="load()">
 
 <!-- Home -->	
 		<div id="home" data-role="page" data-theme="b">
@@ -352,7 +399,12 @@
 				<h1>Map</h1>
 			</div>
 			<div data-role="content" data-theme="b">
-				<img src="assets/imgs/islandmap.png" title="Map of Bermuda with Grid" />
+			<!--	<img src="assets/imgs/islandmap.png" title="Map of Bermuda with Grid" />   -->
+				
+				<div id="scroll">
+				    <img class="blue" src="assets/imgs/islandmap.png"/>
+				</div>
+
 			</div>
 			<div data-role="footer" data-theme="b">
 			</div>
