--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 		<script src="js/jquery.js"></script>
 		<script src="js/bdaLS.js"></script>		
 		<script src="js/jquery.mobile-1.3.1.min.js"></script>
-		<script src="http://debug.phonegap.com/target/target-script-min.js#462050"></script>
+		<script src="phonegap.js"></script>
 		
 		<icon src="img/imgs/bdaSpearfishing.png" width="72" height="72" />
 		
