--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,8 @@
 		<link rel="shortcut icon" href="favicon.ico">
 		<script src="js/jquery.js"></script>
 		<script src="js/bdaLS.js"></script>		
-		<script src="js/cordova.js"></script>	
+	<!--	<script src="js/cordova.js"></script>	-->
+	
 		<script src="js/jquery.mobile-1.3.1.min.js"></script>
 		<script src="phonegap.js"></script>
 		
