fixed user error

--- a/www/index.html
+++ b/www/index.html
@@ -1003,7 +1003,9 @@
 				<div data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
 					<h3 class="ui-title">Saved!</h3>
 					<p>Make sure that you have filled out all the information correctly!</p>
-					<a href="#home"  data-role="button" data-inline="true"  data-transition="flow" data-theme="b">Got it</a>
+					<center>
+						<a href="#home"  data-role="button" data-inline="true"  data-transition="flow" data-theme="b">Got it</a>
+					</center>
 				</div>
 			</div>
 			<div data-role="content" data-theme="b">
