--- a/www/index.html
+++ b/www/index.html
@@ -808,13 +808,18 @@
 <!-- islandMap Page -->		
 		<div id="islandMap" data-role="page" data-theme="b">
 			<div data-role="header" data-theme="b">
+				<a data-direction="reverse" data-transition="slide" data-icon="arrow-l" data-iconpos="left" data-inline="true" href="#home" data-close-btn="none">Back</a>
 				<h1>Map</h1>
 			</div>
 			<div data-role="content" data-theme="b">
-						
+					
+				<div width="100%" style="-webkit-overflow-scrolling:touch; overflow:scroll;">
+					<img alt="" src="img/imgs/SpearfishingExclusionMap.png" />
+				</div>	
+			<!--
 				<div id="scroll">
-				    <img class="blue" src="img/imgs/islandmap.png"/>
-				</div>
+				    <img class="blue" src="img/imgs/SpearfishingExclusionMap.png"/>
+			-->	</div>
 
 			</div>
 			<div data-role="footer" data-theme="b">
@@ -1027,7 +1032,9 @@
 				<input type="number" name="spearfishingLicence" id="spearfishingLicence" placeholder="i.e. 0123" value="">
 				<label for="lionfishPermit">Lionfish Permit#:</label>
 				<input type="number" name="lionfishPermit" id="lionfishPermit" placeholder="i.e. 0123" value="">
-				<a type="submit" onclick="saveUser();" href="#confirmSaved" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" id="submit">Save</a>	
+				<center>
+					<a type="submit" onclick="saveUser();" href="#confirmSaved" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" id="submit">Save</a>	
+				</center>
 			</div>
 			<div data-role="footer" data-position="fixed" data-theme="b">
 			</div>
